--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,14 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
     -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality.
+    -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -17,9 +22,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".InventoryListActivity"></activity>
-        <activity android:name=".ChooseBusinessActivity" />
-        <activity android:name=".PhoneAuthActivity" />
+        <activity android:name=".QRCodeScannerActivity"></activity>
+        <activity android:name=".CaptureActivityAnyOrientation" />
+        <activity android:name=".VendorsListActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -32,6 +37,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".VendorsOnMapActivity"
+            android:label="@string/title_activity_vendors_on_map" />
+        <activity android:name=".InventoryListActivity" />
+        <activity android:name=".ChooseBusinessActivity" />
+        <activity android:name=".PhoneAuthActivity" />
         <activity
             android:name=".InventoriesOnMapActivity"
             android:label="@string/title_activity_inventory_map" />
