--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     implementation 'com.google.zxing:core:3.3.0'
+    implementation ('com.paytm:pgplussdk:1.3.3') {
+        transitive = true
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
