--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     implementation 'com.google.zxing:core:3.3.0'
-    implementation ('com.paytm:pgplussdk:1.3.3') {
-        transitive = true
-    }
+    implementation 'com.paytm.intentupi:paytmintentupi:1.1.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
