--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.hardware.camera" />
+    <uses-permission android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
@@ -26,14 +29,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShowBillActivity"></activity>
+        <activity android:name=".SignUpVendorActivity"></activity>
+        <activity android:name=".ShowBillActivity" />
         <activity android:name=".TakeOrderActivity" />
         <activity android:name=".QRCodeScannerActivity" />
         <activity android:name=".CaptureActivityAnyOrientation" />
         <activity android:name=".VendorsListActivity" />
-        <activity
-            android:name="com.paytm.pgsdk.PaytmPGActivity"
-            android:configChanges="keyboardHidden|orientation|keyboard" />
+        <activity android:name=".SetLocationOfVendor"/>
+        <activity android:name=".SetFoodCatalogue"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
